--- a/package.json
+++ b/package.json
@@ -26,26 +26,29 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.23.0",
     "babili-webpack-plugin": "^0.1.2",
-    "connected-react-router": "^4.0.0-beta.4",
-    "css-loader": "^0.26.2",
+    "connected-react-router": "^4.3.0",
+    "css-loader": "^1.0.0",
     "deep-equal": "^1.0.1",
-    "electron": "^1.7.8",
+    "electron": "^2.0.5",
     "electron-json-config": "^1.4.0",
-    "electron-packager": "^9.1.0",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "electron-packager": "^12.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.28.0",
-    "less": "^2.7.2",
-    "less-loader": "^2.2.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.2",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.4.5"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.0",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "webpack-cli": "^3.0.8"
   }
 }
