--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.23.0",
-    "babili-webpack-plugin": "^0.1.2",
     "connected-react-router": "^4.3.0",
     "css-loader": "^1.0.0",
     "deep-equal": "^1.0.1",
@@ -45,10 +44,11 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "webpack-cli": "^3.0.8"
   }
 }
